# example-pyright-issue-upath

./: pyproject.toml  test.py
